--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=irorun --cov-report=xml
+          uv run pytest --cov=irorun --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
